<resources>
    <string name="app_name">Wofford_Midterm</string>
    <string name="noRec">No. of Records</string>
    <string name="totalExpense">Total Expenses</string>
    <string name="exp_summary">Expenses Summary</string>
    <string name="add_expense">Add Expense</string>
    <string name="zeroInt">0</string>
    <string name="zeroDouble">0.00</string>
    <string name="dollar">$ </string>
    <string name="name">Name:</string>
    <string name="amount">Amount:</string>
    <string name="date">Date:</string>
    <string name="category">Category:</string>
    <string name="name_hint">Name</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel">CANCEL</string>
    <string name="set_date">Set Date</string>
    <string name="pick_cat">Pick Category</string>
    <string name="amount_hint">Cost</string>
    <string name="expenses">Expenses</string>
    <string name="add_new_expense">Add New Expense</string>
</resources>