<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpenseFragment"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewNoRec"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/noRec"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTotalExpense"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/totalExpense"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNoRecNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textViewNoRec"
        app:layout_constraintStart_toStartOf="@+id/textViewNoRec"
        app:layout_constraintTop_toBottomOf="@+id/textViewNoRec" />

    <TextView
        android:id="@+id/textViewTotalExpenseNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textViewTotalExpense"
        app:layout_constraintStart_toStartOf="@+id/textViewTotalExpense"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotalExpense" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonExpSummary" />

    <Button
        android:id="@+id/buttonExpSummary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exp_summary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewNoRecNum"
        app:layout_constraintStart_toStartOf="@+id/textViewNoRecNum"
        app:layout_constraintTop_toBottomOf="@+id/textViewNoRecNum" />

    <Button
        android:id="@+id/buttonAddExpense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_expense"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewTotalExpenseNum"
        app:layout_constraintStart_toStartOf="@+id/textViewTotalExpenseNum"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotalExpenseNum" />

</androidx.constraintlayout.widget.ConstraintLayout>